bizinikiwi/primitives/api/test/tests/ui/declaring_own_block_with_different_name.stderr
error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro! If you try to use a different trait than the bizinikiwi `Block` trait, please rename it locally.
  --> tests/ui/declaring_own_block_with_different_name.rs:19:19
   |
19 |     pub trait Api<B: BlockT> {
   |                      ^^^^^^
